Improve logging and error handling
Improved I/O error handling plus minor refactoring

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,11 @@
 # Compiler flags
 #
 CXX = g++
-CXXFLAGS = -c -fpie -std=c++23 -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -Wshadow
+CXXFLAGS = -c -fpie -std=c++23 -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -Wshadow \
+			-Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 \
+			-Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept \
+			-Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wsign-conversion -Wsign-promo \
+			-Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Wno-unused
 
 #
 # Linker flags
@@ -36,7 +40,7 @@ LDFLAGS += $(shell pkg-config --libs spdlog)
 DBGDIR = ../build/debug
 DBGOBJS = $(addprefix $(DBGDIR)/, $(OBJS))
 DBGTARGET = $(DBGDIR)/$(TARGET)
-DBGCXXFLAGS = -Og -g
+DBGCXXFLAGS = -Og -g -DSNS_DEBUG=1
 DBGLDFLAGS = -Og
 
 #
@@ -45,7 +49,7 @@ DBGLDFLAGS = -Og
 RELDIR = ../build/release
 RELOBJS = $(addprefix $(RELDIR)/, $(OBJS))
 RELTARGET = $(RELDIR)/$(TARGET)
-RELCXXFLAGS = -O3 -march=native -mtune=native -flto -DNDEBUG
+RELCXXFLAGS = -O3 -march=native -mtune=native -flto -DNDEBUG -DSNS_DEBUG=0
 RELLDFLAGS = -O3 -march=native -mtune=native -flto=auto -s
 
 .PHONY: all prep debug release remake clean
@@ -64,7 +68,7 @@ $(DBGTARGET): $(DBGOBJS)
 $(DBGDIR)/Launch.o: Launch.cpp BidirectionalMultimessageSimulation.hpp Util.hpp
 	$(CXX) $(CXXFLAGS) $(DBGCXXFLAGS) $< -o $@
 
-$(DBGDIR)/Application.o: Application.cpp Application.hpp
+$(DBGDIR)/Application.o: Application.cpp Application.hpp Util.hpp
 	$(CXX) $(CXXFLAGS) $(DBGCXXFLAGS) $< -o $@
 
 $(DBGDIR)/BidirectionalMultimessageSimulation.o: BidirectionalMultimessageSimulation.cpp \
@@ -83,7 +87,7 @@ $(RELTARGET): $(RELOBJS)
 $(RELDIR)/Launch.o: Launch.cpp BidirectionalMultimessageSimulation.hpp Util.hpp
 	$(CXX) $(CXXFLAGS) $(RELCXXFLAGS) $< -o $@
 
-$(RELDIR)/Application.o: Application.cpp Application.hpp
+$(RELDIR)/Application.o: Application.cpp Application.hpp Util.hpp
 	$(CXX) $(CXXFLAGS) $(RELCXXFLAGS) $< -o $@
 
 $(RELDIR)/BidirectionalMultimessageSimulation.o: BidirectionalMultimessageSimulation.cpp \
